# popl2020-artifact

./: .gitignore  Dockerfile  Makefile  README.md  artifact  build.sh  generate_graphs.py  plot_f6_a.py  plot_f6_b.py  plot_f7.py  plot_f8_a.py  plot_supf2_b.py  prepare  prosynth  table2.csv  table3.csv
prosynth/souffle/: .clang-tidy  .gitignore  .travis.yml  Makefile.am  README.md  aminclude.am  configure.ac
prosynth/souffle/.travis/: after_failure.sh  bintray_json.sh  checkStyle.sh  init_make_package.sh  init_test.sh  init_test_64bit.sh  run_docker.sh  run_test.sh  run_test_format.sh  test_make_install.sh
prosynth/souffle/.travis/linux/: install_centos_deps.sh  install_debian_deps.sh  install_fedora_deps.sh  make_centos_package.sh  make_fedora_package.sh  make_package.sh
prosynth/souffle/.travis/osx/: brew.sh  install.sh  install_withgcc.sh  make_package.sh
prosynth/souffle/debian/: changelog.in  control  rules  souffle.bash-completion
prosynth/souffle/docker/: .gitignore  .travis.yml  LICENSE  Makefile  README.md
prosynth/souffle/src/: .gitignore  AstAnalysis.h  AstArgument.cpp  AstArgument.h  AstAttribute.h  AstClause.cpp  AstClause.h  AstComponent.h  AstComponentChecker.cpp  AstConstraintAnalysis.h  AstFunctorDeclaration.h  AstGroundAnalysis.cpp  AstGroundAnalysis.h  AstIO.h  AstIOTypeAnalysis.cpp  AstIOTypeAnalysis.h  AstLiteral.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstPragma.cpp  AstPragma.h  AstProfileUse.cpp  AstProfileUse.h  AstProgram.cpp  AstProgram.h  AstRelation.h  AstRelationIdentifier.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstTransformer.cpp  AstTransformer.h  AstTransforms.cpp  AstTransforms.h  AstTranslationUnit.h  AstTranslator.cpp  AstTranslator.h  AstType.h  AstTypeAnalysis.cpp  AstTypeAnalysis.h  (+99 more)
prosynth/souffle/src/test/: ast_parser_utils_test.cpp  ast_program_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_index_utils_test.cpp  compiled_relation_test.cpp  compiled_tuple_test.cpp  constraints_test.cpp  eqrel_datastructure_test.cpp  graph_utils_test.cpp  matching_test.cpp  mpi_test.cpp  parallel_utils_test.cpp  profile_util_test.cpp  ram_executor_test.cpp  ram_relation_stats_test.cpp  symbol_table_test.cpp  table_test.cpp  test.h  util_test.cpp
prosynth/souffle/tests/: .gitignore  Makefile.am  atlocal.in  evaluation.at  example.at  fastevaluation.at  interface.at  profile.at  provenance.at  semantic.at  syntactic.at  testsuite.at
prosynth/souffle/tests/evaluation/aggregates/: aggregates.dl
prosynth/souffle/tests/evaluation/aggregates2/: aggregates2.dl
prosynth/souffle/tests/evaluation/aggregates3/: aggregates3.dl  aggregates3.out
prosynth/souffle/tests/evaluation/aggregates_complex/: aggregates_complex.dl
prosynth/souffle/tests/evaluation/arithm/: arithm.dl
prosynth/souffle/tests/evaluation/average/: average.dl
prosynth/souffle/tests/evaluation/cat/: cat.dl
prosynth/souffle/tests/evaluation/comp-override1/: comp-override1.dl
prosynth/souffle/tests/evaluation/components/: components.dl
prosynth/souffle/tests/evaluation/components2/: components2.dl
prosynth/souffle/tests/evaluation/components_generic/: components_generic.dl
prosynth/souffle/tests/evaluation/count/: count.dl
prosynth/souffle/tests/evaluation/counter/: counter.dl
prosynth/souffle/tests/evaluation/empty_relations/: empty_relations.err
prosynth/souffle/tests/evaluation/existential/: existential.dl  existential.err
prosynth/souffle/tests/evaluation/functor_arity/: functor_arity.dl
prosynth/souffle/tests/evaluation/hex/: hex.dl
prosynth/souffle/tests/evaluation/independent_body1/: independent_body1.dl
prosynth/souffle/tests/evaluation/independent_body2/: independent_body2.dl
prosynth/souffle/tests/evaluation/indirect_negation/: indirect_negation.dl
prosynth/souffle/tests/evaluation/inline_functors/: inline_functors.dl
prosynth/souffle/tests/evaluation/inline_negation1/: inline_negation1.dl  inline_negation1.err
prosynth/souffle/tests/evaluation/inline_negation2/: inline_negation2.dl
prosynth/souffle/tests/evaluation/inline_nqueens/: inline_nqueens.dl  inline_nqueens.err
prosynth/souffle/tests/evaluation/inline_records/: inline_records.dl
prosynth/souffle/tests/evaluation/inline_underscore/: inline_underscore.dl
prosynth/souffle/tests/evaluation/inline_unification/: inline_unification.dl
prosynth/souffle/tests/evaluation/magic_2sat/: magic_2sat.dl
prosynth/souffle/tests/evaluation/magic_aggregates/: magic_aggregates.dl
prosynth/souffle/tests/evaluation/magic_centroids/: magic_centroids.dl
prosynth/souffle/tests/evaluation/magic_circuit_sat/: magic_circuit_sat.dl
prosynth/souffle/tests/evaluation/magic_components/: magic_components.dl
prosynth/souffle/tests/evaluation/magic_cprog1/: magic_cprog1.dl
prosynth/souffle/tests/evaluation/magic_dfa/: magic_dfa.dl
prosynth/souffle/tests/evaluation/magic_dominance/: magic_dominance.dl
prosynth/souffle/tests/evaluation/magic_factoring/: magic_factoring.dl
prosynth/souffle/tests/evaluation/magic_goal/: magic_goal.dl
prosynth/souffle/tests/evaluation/magic_lrg_attr_id/: magic_lrg_attr_id.dl
prosynth/souffle/tests/evaluation/magic_movies/: magic_movies.dl
prosynth/souffle/tests/evaluation/magic_names1/: magic_names1.dl
prosynth/souffle/tests/evaluation/magic_nqueens/: magic_nqueens.dl  magic_nqueens.err
prosynth/souffle/tests/evaluation/magic_perfect_numbers/: magic_perfect_numbers.dl
prosynth/souffle/tests/evaluation/magic_records4/: magic_records4.dl
prosynth/souffle/tests/evaluation/magic_samegen/: magic_samegen.dl
prosynth/souffle/tests/evaluation/magic_strategies/: magic_strategies.dl
prosynth/souffle/tests/evaluation/magic_string_substr/: magic_string_substr.dl
prosynth/souffle/tests/evaluation/magic_turing1/: magic_turing1.dl
prosynth/souffle/tests/evaluation/match2/: match2.err
prosynth/souffle/tests/evaluation/minmaxnum/: minmaxnum.dl
prosynth/souffle/tests/evaluation/singleton/: singleton.dl  (+1 more)
prosynth/souffle/utilities/: CMakeLists.txt
(+1151 files in other folders)
