CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(souffle)
SET(CMAKE_CXX_STANDARD 11)
ADD_EXECUTABLE(souffle
        ./src/CompiledIndexUtils.h
        ./src/ProfileEvent.h
        ./src/CompiledRecord.h
        ./src/AstAttribute.h
        ./src/AstAnalysis.h
        ./src/RamCondition.h
        ./src/AstComponentChecker.h
        ./src/ExplainProvenanceImpl.h
        ./src/BTree.h
        ./src/GraphUtils.h
        ./src/profile/html_string.h
        ./src/profile/Table.h
        ./src/profile/UserInputReader.h
        ./src/profile/Rule.h
        ./src/profile/Row.h
        ./src/profile/ProgramRun.h
        ./src/profile/OutputProcessor.h
        ./src/profile/Iteration.h
        ./src/profile/DataComparator.h
        ./src/profile/Relation.h
        ./src/profile/StringUtils.h
        ./src/profile/Cli.h
        ./src/profile/Cell.h
        ./src/profile/CellInterface.h
        ./src/profile/Tui.h
        ./src/profile/Reader.h
        ./src/Explain.h
        ./src/Table.h
        ./src/AstType.h
        ./src/CompiledRelation.h
        ./src/InterpreterRecords.h
        ./src/AstProgram.h
        ./src/CompiledOptions.h
        ./src/Trie.h
        ./src/ParallelUtils.h
        ./src/Global.h
        ./src/ReadStream.h
        ./src/AstVisitor.h
        ./src/json11.h
        ./src/Util.h
        ./src/ErrorReport.h
        ./src/AstTransformer.h
        ./src/WriteStreamCSV.h
        ./src/AstTypeAnalysis.h
        ./src/SymbolTable.h
        ./src/InterpreterRelation.h
        ./src/InterpreterIndex.h
        ./src/SignalHandler.h
        ./src/StringPool.h
        ./src/WriteStreamSQLite.h
        ./src/AstTranslator.h
        ./src/ReadStreamCSV.h
        ./src/TypeSystem.h
        ./src/UnaryFunctorOps.h
        ./src/test/test.h
        ./src/ProfileDatabase.h
        ./src/SrcLocation.h
        ./src/RamTranslationUnit.h
        ./src/CompiledTuple.h
        ./src/htmx86.h
        ./src/ComponentModel.h
        ./src/BinaryConstraintOps.h
        ./src/AstParserUtils.h
        ./src/ReadStreamSQLite.h
        ./src/gzfstream.h
        ./src/AstRelationIdentifier.h
        ./src/IndexSetAnalysis.h
        ./src/Logger.h
        ./src/BinaryFunctorOps.h
        ./src/AstArgument.h
        ./src/InterpreterInterface.h
        ./src/RamProgram.h
        ./src/RamRelation.h
        ./src/IterUtils.h
        ./src/RamValue.h
        ./src/TernaryFunctorOps.h
        ./src/DebugReport.h
        ./src/AstNode.h
        ./src/CompiledSouffle.h
        ./src/ExplainTree.h
        ./src/IOSystem.h
        ./src/AstUtils.h
        ./src/WriteStream.h
        ./src/AstTypes.h
        ./src/Interpreter.h
        ./src/RamTransformer.h
        ./src/RamVisitor.h
        ./src/Mpi.h
        ./src/EventProcessor.h
        ./src/InterpreterContext.h
        ./src/AstTranslationUnit.h
        ./src/RamSemanticChecker.h
        ./src/ParserDriver.h
        ./src/IODirectives.h
        ./src/AstLiteral.h
        ./src/RamOperation.h
        ./src/LogStatement.h
        ./src/RamTypes.h
        ./src/Synthesiser.h
        ./src/ExplainProvenance.h
        ./src/SouffleInterface.h
        ./src/MagicSet.h
        ./src/AstPragma.h
        ./src/RamNode.h
        ./src/RamAnalysis.h
        ./src/AstSemanticChecker.h
        ./src/PrecedenceGraph.h
        ./src/AstIODirective.h
        ./src/Constraints.h
        ./src/AstRelation.h
        ./src/AstComponent.h
        ./src/UnionFind.h
        ./src/LambdaBTree.h
        ./src/RamStatement.h
        ./src/AstTransforms.h
        ./src/AstClause.h
        ./src/EquivalenceRelation.h
        ./src/BinaryRelation.h
        ./src/RamTransforms.h
        ./src/ParserDriver.cpp
        ./src/AstTransformer.cpp
        ./src/PrecedenceGraph.cpp
        ./src/AstArgument.cpp
        ./src/AstUtils.cpp
        ./src/AstClause.cpp
        ./src/main.cpp
        ./src/InlineRelationsTransformer.cpp
        ./src/DebugReport.cpp
        ./src/AstSemanticChecker.cpp
        ./src/test/ram_relation_stats_test.cpp
        ./src/test/compiled_index_utils_test.cpp
        ./src/test/matching_test.cpp
        ./src/test/btree_multiset_test.cpp
        ./src/test/parallel_utils_test.cpp
        ./src/test/constraints_test.cpp
        ./src/test/symbol_table_test.cpp
        ./src/test/compiled_tuple_test.cpp
        ./src/test/ast_utils_test.cpp
        ./src/test/util_test.cpp
        ./src/test/mpi_test.cpp
        ./src/test/compiled_relation_test.cpp
        ./src/test/table_test.cpp
        ./src/test/binary_relation_test.cpp
        ./src/test/type_system_test.cpp
        ./src/test/ast_program_test.cpp
        ./src/test/trie_test.cpp
        ./src/test/btree_set_test.cpp
        ./src/test/ast_parser_utils_test.cpp
        ./src/test/graph_utils_test.cpp
        ./src/test/ram_executor_test.cpp
        ./src/ComponentModel.cpp
        ./src/ProvenanceTransformer.cpp
        ./src/InterpreterRecords.cpp
        ./src/Interpreter.cpp
        ./src/AstTransforms.cpp
        ./src/AstPragma.cpp
        ./src/RamOperation.cpp
        ./src/souffle2bdd.cpp
        ./src/souffle2lb.cpp
        ./src/TypeSystem.cpp
        ./src/AstComponentChecker.cpp
        ./src/AstParserUtils.cpp
        ./src/SrcLocation.cpp
        ./src/AstTranslator.cpp
        ./src/IndexSetAnalysis.cpp
        ./src/souffle_prof.cpp
        ./src/RamTransformer.cpp
        ./src/AstTypeAnalysis.cpp
        ./src/Synthesiser.cpp
        ./src/AstProgram.cpp
        ./src/MagicSet.cpp
        ./src/Global.cpp
        ./src/RamTransforms.cpp
        )
