# Souffle - A Datalog Compiler
# Copyright (c) 2019 The Souffle Developers. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at:
# - https://opensource.org/licenses/UPL
# - <souffle root>/licenses/SOUFFLE-UPL.txt

noinst_LTLIBRARIES = libfunctors.la
libfunctors_la_SOURCES = functors.cpp
libfunctors_la_LDFLAGS = -version-info 0:0:0 
